--- a/static/css/master.css
+++ b/static/css/master.css
@@ -1,1 +1,1 @@
-#div-index{margin-top:200px}#div-index a.btn{width:7em;font-size:5em;height:2em}
+#div-index{margin-top:200px}#div-index a.btn{width:7em;font-size:5em;height:2em}.form-control{width:50%}
