More styling improvements.

--- a/static/css/master.css
+++ b/static/css/master.css
@@ -1,1 +1,1 @@
-#div-index{margin-top:200px}#div-index a.btn{width:7em;font-size:5em;height:2em}.form-control{width:50%}
+#div-index{margin-top:200px}#div-index a.btn{width:7em;font-size:5em;height:2em}.form-control{width:50%}#room-input-div{width:80%}#room-input-div .form-control{width:100%}
