--- a/views/base/base.html
+++ b/views/base/base.html
@@ -5,6 +5,8 @@
     {{template "head" .}}
   </head>
   <body>
-    {{template "body" .}}
+    <div class="container-fluid">
+      {{template "body" .}}
+    </div>
   </body>
 </html>
