--- a/views/room.html
+++ b/views/room.html
@@ -3,11 +3,20 @@
   <title>Room</title>
 {{end}}
 {{define "body"}}
-  <div>
-    <ul id="chat-history"></ul>
+  <div class="row">
+    <div class="col-md-offset-3 col-md-6">
+      <div class="jumbotron">
+        <ul id="chat-history"></ul>
+      </div>
+
+      <form class="form-inline">
+        <div class="form-group" id="room-input-div">
+          <input type="text" class="form-control" name="input" id="input">
+        </div>
+        <button type="submit" class="btn btn-primary" id="submit-btn">
+          Send
+        </button>
+      </form>
+    </div>
   </div>
-  <form>
-    <input type="text" name="input" id="input">
-    <input type="submit" value="Enter" id="submit-btn">
-  </form>
 {{end}}
