--- a/views/room.html
+++ b/views/room.html
@@ -3,14 +3,14 @@
   <title>Room</title>
 {{end}}
 {{define "body"}}
-  <div class="row">
+  <div class="row" id="room--div--container">
     <div class="col-md-offset-3 col-md-6">
       <div class="jumbotron">
         <ul id="chat-history"></ul>
       </div>
 
       <form class="form-inline">
-        <div class="form-group" id="room-input-div">
+        <div class="form-group" id="room--div--input">
           <input type="text" class="form-control" name="input" id="input">
         </div>
         <button type="submit" class="btn btn-primary" id="submit-btn">
