--- a/views/create.html
+++ b/views/create.html
@@ -5,8 +5,12 @@
 {{define "body"}}
   <form method="POST">
     <div class="form-group">
-      <label for="name">Room name:</label>
-      <input type="text" class="form-control" name="name">
+      <label for="room-name">Room name:</label>
+      <input type="text" class="form-control" name="room-name">
+    </div>
+    <div class="form-group">
+      <label for="username">Username:</label>
+      <input type="text" class="form-control" name="username">
     </div>
     <button type="submit" class="btn btn-default">
       Create room
