--- a/views/join.html
+++ b/views/join.html
@@ -8,6 +8,10 @@
       <label for="name">Room name:</label>
       <input type="text" class="form-control" name="name">
     </div>
+    <div class="form-group">
+      <label for="username">Username:</label>
+      <input type="text" class="form-control" name="username">
+    </div>
     <button type="submit" class="btn btn-default">
       Join room
     </button>
