Implement messages array for each room.

--- a/views/room.html
+++ b/views/room.html
@@ -22,4 +22,5 @@
     </div>
   </div>
   <span style='display: none' id='username'>{{.username}}</span>
+  <span style='display: none' id='roomName'>{{.roomName}}</span>
 {{end}}
