Move JS script loading to just for room page.

--- a/views/room.html
+++ b/views/room.html
@@ -1,5 +1,6 @@
 {{template "base/base.html" .}}
 {{define "head"}}
+  <script src="/static/js/room.js" charset="utf-8"></script>
   <title>Room</title>
 {{end}}
 {{define "body"}}
