--- a/views/create.html
+++ b/views/create.html
@@ -12,11 +12,11 @@
   <form method="POST">
     <div class="form-group">
       <label for="room-name">Room name:</label>
-      <input type="text" class="form-control" name="room-name">
+      <input type="text" class="form-control" name="room-name" required>
     </div>
     <div class="form-group">
       <label for="username">Username:</label>
-      <input type="text" class="form-control" name="username">
+      <input type="text" class="form-control" name="username" required>
     </div>
     <button type="submit" class="btn btn-default">
       Create room
