--- a/views/join.html
+++ b/views/join.html
@@ -6,11 +6,11 @@
   <form method="POST">
     <div class="form-group">
       <label for="name">Room name:</label>
-      <input type="text" class="form-control" name="name">
+      <input type="text" class="form-control" name="name" required>
     </div>
     <div class="form-group">
       <label for="username">Username:</label>
-      <input type="text" class="form-control" name="username">
+      <input type="text" class="form-control" name="username" required>
     </div>
     <button type="submit" class="btn btn-default">
       Join room
